# cdk-from-cfn

./: .gitignore  Cargo.toml  Justfile  build.rs
.github/workflows/: status-checks.yml  update-schema.yml
cdk-from-cfn-macros/src/: lib.rs
cdk-from-cfn-testing/: Cargo.toml  README.md
cdk-from-cfn-testing/src/: lib.rs  stack.rs  synthesizer.rs
cdk-from-cfn-testing/src/config/: files.rs  language.rs  mod.rs  paths.rs  scope.rs  stacks.rs  templates.rs
src/: lib.rs
src/specification/: cdk-resources.json
src/synthesizer/tests/: mod.rs  stack.rs  test.rs
src/testing/: README.md  mod.rs  stack.rs  synthesizer.rs
src/testing/config/: files.rs  language.rs  mod.rs  paths.rs  scope.rs  stacks.rs  templates.rs
tests/: README.md  cdk-stack-synth.rs
tests/cdk_stack_synth/: environment.rs  files.rs  mod.rs  paths.rs  stack.rs  test.rs
tests/cdk_stack_synth/end_to_end/: client.rs  controller.rs  mod.rs
tests/cdk_stack_synth/install/: mod.rs
tests/cdk_stack_synth/install/fixtures/: mod.rs  writer.rs
tests/cdk_stack_synth/install/fixtures/csharp/: setup-and-synth.sh  writer.rs
tests/cdk_stack_synth/install/fixtures/csharp/boilerplate/: CSharp.csproj
tests/cdk_stack_synth/install/fixtures/golang/: setup-and-synth.sh  writer.rs
tests/cdk_stack_synth/install/fixtures/java/: setup-and-synth.sh  writer.rs
tests/cdk_stack_synth/install/fixtures/python/: setup-and-synth.sh  writer.rs
tests/cdk_stack_synth/install/fixtures/typescript/: setup-and-synth.sh  writer.rs
tests/cdk_stack_synth/synth/: mod.rs  skip.rs  template.rs
