[package]
name = "cdk-from-cfn"
version = "0.244.0"
edition = "2021"
description = "Turn AWS CloudFormation templates into AWS CDK applications"
license = "MIT OR Apache-2.0"

repository = "https://github.com/cdklabs/cdk-from-cfn"
homepage = "https://github.com/cdklabs/cdk-from-cfn#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["golang", "java", "typescript", "python", "csharp"]
# Language support
golang = []
java = []
typescript = []
csharp = []
python = []

# Testing features
update-snapshots = ["cdk-from-cfn-testing/update-snapshots"]
skip-clean = ["cdk-from-cfn-testing/skip-clean"]
end-to-end = ["cdk-from-cfn-testing/end-to-end"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "^0.22.1"
clap = { version = "^4.5.47", features = ["cargo"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
indexmap = { version = "^2.11.1", features = ["serde"] }
nom = "^8.0.0"
phf = { version = "^0.13.1", features = ["macros"] }
serde = { version = "^1.0.218", features = ["derive"] }
serde-enum-str = "^0.4.0"
serde_json = "1.0"
serde_yaml = "^0.9.34"
thiserror = "^2.0.16"
toml = "^0.8.0"
topological-sort = "^0.2.2"
voca_rs = "^1.15.2"
walkdir = "2.3"
wasm-bindgen = "^0.2.100"
cdk-from-cfn-macros = { path = "cdk-from-cfn-macros" }

[dev-dependencies]
cdk-from-cfn-testing = { path = "cdk-from-cfn-testing" }
aws-config = "^1.8.1"
aws-sdk-cloudformation = "^1.83.0"
aws-sdk-s3 = "^1.83.0"
aws-smithy-types = "^1.2.0"
aws-smithy-runtime-api = "^1.8.1"
futures = "0.3"
serial_test = "3.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
indexmap = "^2.11.1"
phf = { version = "^0.13.1", features = ["macros"] }
phf_codegen = "^0.13.1"
serde = { version = "^1.0.218", features = ["derive"] }
serde-enum-str = "^0.4.0"
serde_json = "^1.0.143"
voca_rs = "^1.15.2"
walkdir = "2.5.0"
zip = "^5.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.test]
opt-level = 1        # Light optimization
debug = false        # Keep debug info minimal  
lto = false          # Disable LTO for faster compilation
incremental = true   # Enable incremental compilation
